[gd_scene load_steps=5 format=3 uid="uid://cgvev3etdmlro"]

[ext_resource type="PackedScene" uid="uid://8q6ovcg2jcc4" path="res://UI/GameUI.tscn" id="1_1uerf"]
[ext_resource type="Script" path="res://UI/GUI.gd" id="1_utu6n"]
[ext_resource type="PackedScene" uid="uid://d228jnajkcqxe" path="res://UI/MenuUI.tscn" id="2_iux2m"]
[ext_resource type="PackedScene" uid="uid://c44eavgyr53au" path="res://UI/EndUI.tscn" id="4_occmn"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_utu6n")

[node name="GameUI" parent="." instance=ExtResource("1_1uerf")]
layout_mode = 1

[node name="MenuUI" parent="." instance=ExtResource("2_iux2m")]
layout_mode = 1

[node name="EndUI" parent="." instance=ExtResource("4_occmn")]
layout_mode = 1
